--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,9 +8,9 @@ spring.jpa.hibernate.ddl-auto=validate
 # Database Configuration Section
 spring.datasource.platform=mysql
 spring.database.driverClassName=com.mysql.jdbc.Driver
-spring.datasource.url=***
-spring.datasource.username=***
-spring.datasource.password=***
+spring.datasource.url=jdbc:mysql://192.168.0.198/google?useUnicode=true&characterEncoding=utf8
+spring.datasource.username=root
+spring.datasource.password=adwitt123
 spring.datasource.maxIdle=1
 spring.datasource.maxActive=1
 spring.datasource.testOnBorrow=true
