--- a/pom.xml
+++ b/pom.xml
@@ -77,6 +77,30 @@
             <artifactId>json-path</artifactId>
         </dependency>
 
+
+        <!-- Front Lib -->
+
+        <dependency>
+            <groupId>org.webjars</groupId>
+            <artifactId>react</artifactId>
+            <version>15.1.0</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.webjars</groupId>
+            <artifactId>bootstrap</artifactId>
+            <version>3.3.5</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.webjars.npm</groupId>
+            <artifactId>babel-browser</artifactId>
+            <version>6.1.19</version>
+        </dependency>
+
+
+        <!-- //Front Lib -->
+
     </dependencies>
 
 
